fix css for word-break, this prevents long urls from stretching out the editor window

--- a/public/css/case-edit.css
+++ b/public/css/case-edit.css
@@ -213,7 +213,7 @@ article.case-edit fieldset h2 {
   -moz-tab-size: 4;
   text-align: left;
   white-space: pre-wrap;
-  word-wrap: break-word;
+  word-break: break-word;
 }
 .ql-editor > * {
   cursor: text;
